<resources>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="loginText">Login</string>
    <string name="loginHint">Login name</string>
    <string name="passwordText">Password</string>
    <string name="whatDoesItDo">What does it do?</string>
    <string name="radioButton">Radio button</string>
    <string name="checkBox">Check box</string>
    <string name="emailLoginButton">Login</string>
    <string name="dialog_message">Do you want to finish this activity?</string>
    <string name="dialog_title">Confirmation</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="switchOnDialog">Switch is on</string>
    <string name="switchOffDialog">Switch is off</string>
    <string name="listItemActivityInfoPass">My information to share</string>
    <string name="listItemActivityInfoPassPrefix">ListItemActivity passed:\ </string>
    <string name="startChat">Start chat</string>
    <string name="sendTextMessage">Send</string>
    <string name="textMessageHint">Type your message</string>
    <string name="weatherForecastText">Weather Forecast</string>
    <string name="testToolBarText">Test Toolbar</string>
    <string name="lowText">Low</string>
    <string name="highText">High</string>
    <string name="averageText">Average</string>
    <string name="deleteThisMessageText">Delete this message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="option1Text">Option 1</string>
    <string name="option2Text">Option 2</string>
    <string name="option3Text">Option 3</string>
    <string name="aboutText">About</string>
    <string name="doYouWantToGoBackText">Do you want to go back?</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <string name="newMessageText">New message</string>
    <string name="versionByQiulinText">Version 1.0 by Qiulin Wei</string>
    <string name="floatActionButtonClickedText">Floating button clicked!</string>
</resources>
