<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.salun.androidlabs.StartActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:layout_centerInParent="true"
        android:id="@+id/textView" />

    <Button
        android:id="@+id/buttonStart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/startChatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonStart1"
        android:layout_centerHorizontal="true"
        android:text="@string/startChat"
        />

    <Button
        android:id="@+id/startWeatherForecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/startChatButton"
        android:text="@string/weatherForecastText"
        />

    <Button
        android:id="@+id/startTestToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/startWeatherForecastButton"
        android:text="@string/testToolBarText"
        />

</RelativeLayout>